src-tauri/crates/appdb/tests/ui/sensitive/unsupported_secure_type.rs
use appdb::Sensitive;
use serde::{Deserialize, Serialize};

#[derive(Serialize, Deserialize, Sensitive)]
struct InvalidRecord {
    #[secure]
    pub counter: u32,
}

fn main() {}
